# blog-web-juan

./: .dockerignore  .gitattributes  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: main.yml
migrations/2022-08-23-044321_create_posts/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
templates/: contact.html  index.html  post.html  posts.html  profile.html  service.html
